move market query functions to queries folder and add functions to query for cryptocurrencies
